2002-01-02  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/data/opcodes.txt: Fixed a bug introduced on the
	2001-12-16, opcode parameters were around the right way, it's the
	documentation that wasn't. Docs updated, and APUT and POPEID opcodes
	updated.

2002-01-02  Tristan Tarrant  <nadir@users.sourceforge.net>
	* NEWS: updated

2002-01-01  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Shift-left-click inserts shape from ExultStudio.
	Dragging with left-button 'paints' if in terrain-editing mode
	(skip_lift == 0).

	* gamerend.cc: Rendering in terrain-editing mode.
	* gamemap.cc (Game_map): Clear 'modified' flag after writing terrain.
	* objs/chunkter.cc:  Render_all() for terrain-editing mode.
	* gamewin.cc: A get_shape_location() for a tile.

2002-01-01  Patrick Burke  <takhisisii@yahoo.com.au>
	* tools/.cvsignore: Added cmanip to ignore list.
	* usecode/ucxt/src/Makefile.am: Added -Wall and -W compile options.
	* usecode/ucxt/data/opcodes.txt: Added additional flags for pretty
	printing -fz output, and 'fake' opcodes for internal decompilation
	use.
	* usecode/ucxt/*: Modified source to support the additional flags;
	Fixed all unnecessary warnings produced by -Wall and -W; Added
	'decimal' output option support for the opcodes.txt file.

2001-12-30  Jeff Freedman  <jeff@amy.nerble.net>

	* gamemap.cc,server.cc: Send terrain data to client.

	* mapedit/chunklst.cc (Chunk_chooser): 'Move' is working (somewhat).

2001-12-30  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/data/opcodes.txt: Added a parenthesis flag to help with
	pretty printing output under -fz, modified the usecode-script output
	column under a number of opcodes as a consequence.
	* usecode/ucxt/*: More pretty-printing output corrections under -fz,
	including local vars, return var and semicolons in the appropriate
	places.

	* usecode/ucxt/*: Added a 'basic' option (-b), to not do any of the
	more complex optimisations. Fixed a bug caused by the abovementioned