@@ -1,3 +1,6 @@
+2002-01-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* usecode/compiler/*: added support for labels and goto, added support for optional 'var' keywords in function prototypes for ucxt compatibility.
+
 2002-01-02  Patrick Burke  <takhisisii@yahoo.com.au>
 	* usecode/ucxt/data/opcodes.txt: Fixed a bug introduced on the
 	2001-12-16, opcode parameters were around the right way, it's the
